[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/tileset.tres" type="TileSet" id=1]
[ext_resource path="res://src/Screens/EndScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sfx/cannon_01.ogg" type="AudioStream" id=4]
[ext_resource path="res://src/UserInterface/UserInterface.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Objects/Portal2D.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Levels/fog.shader" type="Shader" id=7]
[ext_resource path="res://assets/background/Full Moon - background.png" type="Texture" id=8]
[ext_resource path="res://src/Actors/Boss2.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Levels/BossEnterSwitch.gd" type="Script" id=10]
[ext_resource path="res://assets/background.png" type="Texture" id=11]
[ext_resource path="res://src/Levels/Level08_boss.gd" type="Script" id=12]
[ext_resource path="res://assets/music/Boss Battle 6 Metal V1.ogg" type="AudioStream" id=13]
[ext_resource path="res://src/Levels/shockwave.shader" type="Shader" id=14]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 7 )
shader_param/color = Vector3( 0.35, 0.48, 0.95 )
shader_param/OCTAVES = 4

[sub_resource type="Animation" id=2]
resource_name = "shockwave"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:material:shader_param/force")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.07, 0.01 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:material:shader_param/size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 3.0 ]
}

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 14 )
shader_param/center = Vector2( 0.5, 0.5 )
shader_param/force = 0.07
shader_param/size = 0.0
shader_param/thickness = 0.22

[node name="Level08_boss" type="Node2D"]
script = ExtResource( 12 )
__meta__ = {
"_edit_horizontal_guides_": [ 947.086 ],
"_edit_vertical_guides_": [ 3122.0 ]
}

[node name="UserInterface" type="CanvasLayer" parent="."]
layer = 101

[node name="UserInterface" parent="UserInterface" instance=ExtResource( 5 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="background" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fog" type="Sprite" parent="CanvasLayer"]
material = SubResource( 1 )
texture = ExtResource( 11 )
centered = false

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -3, 280 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 80, 80 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( -196613, 0, 0, -196612, 0, 0, -196611, 0, 0, -196610, 0, 0, -196609, 0, 0, -262120, 0, 0, -262119, 0, 0, -262118, 0, 0, -262117, 0, 0, -262116, 0, 0, -131077, 0, 0, -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -131073, 0, 0, -196584, 0, 0, -196583, 0, 0, -196582, 0, 0, -196581, 0, 0, -196580, 0, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131048, 0, 0, -131047, 0, 0, -131046, 0, 0, -131045, 0, 0, -131044, 0, 0, -5, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131096, 0, 0, 131097, 0, 0, 131098, 0, 0, 131099, 0, 0, 131100, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 524283, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 589819, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 655355, 0, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 720891, 0, 0, 720892, 0, 0, 720893, 0, 0, 720894, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0, 655384, 0, 0, 655385, 0, 0, 655386, 0, 0, 655387, 0, 0, 655388, 0, 0, 786427, 0, 0, 786428, 0, 0, 786429, 0, 0, 786430, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 720920, 0, 0, 720921, 0, 0, 720922, 0, 0, 720923, 0, 0, 720924, 0, 0, 851963, 0, 0, 851964, 0, 0, 851965, 0, 0, 851966, 0, 0, 851967, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 0, 0 )

[node name="TileMap2" type="TileMap" parent="."]
position = Vector2( -3, 280 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 80, 80 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( -196610, 0, 0, -196609, 0, 0, -262120, 0, 0, -262119, 0, 0, -131074, 0, 0, -131073, 0, 0, -196584, 0, 0, -196583, 0, 0, -65538, 0, 0, -65537, 0, 0, -131048, 0, 0, -131047, 0, 0, -2, 0, 0, -1, 0, 0, -65512, 0, 0, -65511, 0, 0, 65534, 0, 0, 65535, 0, 0, 24, 0, 0, 25, 0, 0, 131070, 0, 0, 131071, 0, 0, 65560, 0, 0, 65561, 0, 0, 196606, 0, 0, 196607, 0, 0, 131096, 0, 0, 131097, 0, 0, 262142, 0, 0, 262143, 0, 0, 196632, 0, 0, 196633, 0, 0, 327678, 0, 0, 327679, 0, 0, 262168, 0, 0, 262169, 0, 0, 393214, 0, 0, 393215, 0, 0, 327704, 0, 0, 327705, 0, 0, 458750, 0, 0, 458751, 0, 0, 393240, 0, 0, 393241, 0, 0, 524286, 0, 0, 524287, 0, 0, 458757, 0, 0, 458763, 0, 0, 458764, 0, 0, 458770, 0, 0, 458776, 0, 0, 458777, 0, 0, 589822, 0, 0, 589823, 0, 0, 524312, 0, 0, 524313, 0, 0, 655358, 0, 0, 655359, 0, 0, 589848, 0, 0, 589849, 0, 0, 720894, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0, 655384, 0, 0, 655385, 0, 0, 786430, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 720920, 0, 0, 720921, 0, 0, 851966, 0, 0, 851967, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0 )

[node name="Boss2" parent="." instance=ExtResource( 9 )]
position = Vector2( 1728.38, 245.989 )
scale = Vector2( 1, 1 )
hit_points = 10

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 144, 1070.01 )

[node name="Camera2D" parent="Player" index="3"]
limit_left = -80
limit_right = 2000
limit_bottom = 1160

[node name="Portal2D" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 1016, 1428.54 )
next_scene = ExtResource( 2 )

[node name="BossMusic" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 13 )
volume_db = 8.0
bus = "Music"

[node name="BossEnterSwitch" type="RayCast2D" parent="."]
position = Vector2( 1933.38, 266.988 )
enabled = true
cast_to = Vector2( -250, 0 )
collision_mask = 2
script = ExtResource( 10 )

[node name="BossBuddySpawn" type="Tween" parent="."]

[node name="BlockSpawner" type="Timer" parent="."]
wait_time = 3.0

[node name="MusicTween" type="Tween" parent="."]

[node name="Shockwave" type="CanvasLayer" parent="."]

[node name="ShockAnimation" type="AnimationPlayer" parent="Shockwave"]
anims/shockwave = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Shockwave"]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossBuddySpawnSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "Effects"
[connection signal="dead" from="Boss2" to="." method="_on_Boss2_dead"]
[connection signal="hit" from="Boss2" to="Player" method="_on_Boss2_hit"]
[connection signal="hit" from="Boss2" to="." method="_on_Boss2_hit"]
[connection signal="spawn" from="Boss2" to="." method="_on_Boss2_spawn"]
[connection signal="tween_all_completed" from="BossBuddySpawn" to="." method="_on_BossBuddySpawn_tween_all_completed"]
[connection signal="tween_completed" from="BossBuddySpawn" to="." method="_on_BossBuddySpawn_tween_completed"]
[connection signal="timeout" from="BlockSpawner" to="." method="_on_BlockSpawner_timeout"]

[editable path="Player"]
